--- a/index.html
+++ b/index.html
@@ -32,21 +32,47 @@
     </section>
     <section class="box1">
         <h2>Site Map</h2>
-        <img src="chart1.jpg" alt="char1" width="25" height="25" style="float:left"><p>주식 Stock</p>
-        <img src="moneyic.jpg" alt="money" width="25" height="25" style="float:left"><p>Economy</p>
+        <a href="hp1.html"><img src="chart1.jpg" alt="char1" width="25" height="25" style="float:left"><p>주식 Stock</p></a>
+        <a href="money.html"><img src="moneyic.jpg" alt="money" width="25" height="25" style="float:left"><p>Economy</p></a>
         <img src="newsic.jpg" alt="news" width="25" height="25" style="float:left"><p>Current events</p>
         <img src="improic.jpg" alt="improve" width="25" height="25" style="float:left"><p>Self-improvement</p>
+        <img src="chart1.jpg" alt="char1" width="25" height="25" style="float:left"><p>Company</p>
+    </section>
+    
+
+<center>
+
+ <form method=get action="http://www.google.co.kr/search" target="_blank" >
+
+  <table>
+    <tr>
+
+      <td>
+
+          <input type=text name=q size=20 maxlength=255 style=font-size:13pt value="" />
+
+          <input type=hidden name=ie value=utf-8/>
+
+          <input type=hidden name=oe value=utf-8/>
+
+          <input type=hidden name=hl value=ko />
+
+          <input type=submit name=btnG value="Google 검색" />
+
+      </td>
+
+    </tr>
+ </table>
+ </form>
+</center>
 
 
+   <section style="padding-right: 18px">
+       <a href="https://www.instagram.com/k_ss2501/"><img src="instaic.jpg" alt="char1" width="37" height="37" style="float:right"></a>
+       <a href="http://qr.kakao.com/talk/2YVrBRElqAnMmGZiclEkygZwv78-"><img src="kakaoic.jpg" alt="char1" width="37" height="37" style="float:right"></a>
+       <a href="mailto:sangsuk2501@naver.com"><img src="mailic.jpg" alt="char1" width="37" height="37" style="float:right"></a>
     </section>
 
-
-
-
-
-    <section class="box10">
-        <a href="hp1.html"><p>photo1</p></a>
-    </section>
 
     <footer>
         <p>copyright KSS. All right reserved.</p>
