--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KSS HOMEPAGE</title>
     <link rel='stylesheet' href="kstyle.css">
+
 </head>
 <body>
     <div class="mainbox">
@@ -49,7 +50,7 @@
 
       <td>
 
-          <input type=text name=q size=20 maxlength=255 style=font-size:13pt value="" />
+          <input type=text name=q size=20 maxlength=255 style=font-size:27pt value="" />
 
           <input type=hidden name=ie value=utf-8/>
 
@@ -61,17 +62,94 @@
 
       </td>
 
-    </tr>
+   </tr>
  </table>
  </form>
 </center>
 
 
-   <section style="padding-right: 18px">
+   <section class="float-wrap" style="padding-right: 18px">
        <a href="https://www.instagram.com/k_ss2501/"><img src="instaic.jpg" alt="char1" width="37" height="37" style="float:right"></a>
        <a href="http://qr.kakao.com/talk/2YVrBRElqAnMmGZiclEkygZwv78-"><img src="kakaoic.jpg" alt="char1" width="37" height="37" style="float:right"></a>
        <a href="mailto:sangsuk2501@naver.com"><img src="mailic.jpg" alt="char1" width="37" height="37" style="float:right"></a>
     </section>
+
+
+    <table class="tac">
+        <thead>
+          <tr>
+              <th>이름</th>
+              <th>성별</th> 
+          </tr>
+        </thead>
+        <tbody>
+            <tr align="right">
+                <td>상석</td>
+                <td>남</td>
+            </tr>
+            <tr height="50">
+                <td>광순</td>
+                <td>여</td>
+            </tr>
+                
+            <tr>
+                <td bgcolor="white">지찬</td>
+                <td>여</td>
+            </tr>
+            <tr>
+                <td>인호</td>
+                <td>남</td>
+            </tr>
+            <tr>
+                <td>윤호</td>
+                <td>남</td>
+            </tr>
+            <tr>
+                <td>일록</td>
+                <td>중</td>
+            </tr>
+            <tr>
+                <td>종일</td>
+                <td>남</td>
+            </tr>
+            <tr>
+                <td>현승</td>
+                <td>남</td>
+            </tr>
+            <tr>
+                <td>홍문</td>
+                <td>남</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <div>
+        이름:<input type="text" backgrond-color="red">
+        체크:<input type="checkbox">
+        색낄:<input type="color">
+        여러문장<textarea>엥?</textarea>
+        드뢉다운<select name="강상석">
+            <option>상석</option>
+            <option>석상</option>
+            <option>높석</option> 
+        </select>
+        <form>
+            이메일<input type="email" placeholder="email">
+            <input type="tel" placeholder="tel">
+            <input type="password" placeholder="비번">
+            <input type="file" placeholder="file">
+            <input type="submit">
+            <button type="submit">로그인</button>
+            <input type="month">
+            결정인풋?<input type="datetime">
+        </form>
+    </div>
+
+    <div>
+        <video src="IMG_8041.MOV" width="170" controls>choi</video>
+    </div>
+
+
 
 
     <footer>
