--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KSS HOMEPAGE</title>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="KSS website"/>
+    <meta property="og:description" content="Test website"/>
+    <meta property="og:image" content="IMG_i896.png"/>
+    
     <link rel='stylesheet' href="kstyle.css">
 
 </head>
@@ -156,6 +161,5 @@
         <p>copyright KSS. All right reserved.</p>
 
     </footer>
-    
 </body>
 </html>
